# rdma

./: Cargo.toml
ibverbs/: Cargo.toml
ibverbs-sys/: Cargo.toml  build.rs
ibverbs-sys/src/: lib.rs
ibverbs/examples/pingpong/: main.rs
ibverbs/src/: ah.rs  cc.rs  cq.rs  ctx.rs  dm.rs  lib.rs  mr.rs  mw.rs  pd.rs  qp.rs  srq.rs  utils.rs  wc.rs  wr.rs
ibverbs/src/device/: device_attr.rs  device_list.rs  gid.rs  guid.rs  port_attr.rs
