[package]
name = "ibverbs"
version = "0.0.1"
edition = "2024"

[dependencies]
ibverbs-sys = {path = "../ibverbs-sys"}

bitflags = "2.2.1"
bytemuck = { version = "1.13.1", optional = true }
fnv = "1.0.7"
hex-simd = "0.8.0"
libc = "0.2"
nugine-rust-utils = "0.3.1"
numeric_cast = "0.2.1"
parking_lot = "0.12.1"
scopeguard = "1.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
